# runner-manager

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  codecov.yml  config.yaml.example  config_example.yml  docker-compose.yaml  docker-compose.yml  manager-requirements.txt  manager.Dockerfile  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  settings.yml  setup.cfg  setup.py  test-requirements.txt  test.Dockerfile  tox.ini  web-requirements.txt  web.Dockerfile
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: actionlint.yaml  dependabot.yaml  dependabot.yml  release.yaml
.github/dockerfiles/: Dockerfile  requirements.txt
.github/workflows/: build-and-cleanup-images.yaml  build-docs.yaml  build.yaml  checkov.yaml  codeQL-analysis.yaml  codeql.yaml  dependabot.yaml  dependency-review.yaml  deploy-docs.yaml  deployment.yaml  deployments.yml  publish-docs.yaml  release.yaml  release.yml  sbom-generator.yaml  security.yaml  test-deployment.yaml  test-workflow-file.yaml  test_aws.yaml  test_runner_aws.yaml  tests.yaml  tests.yml  trivy-scan.yaml  trivy.yaml  trunk-check.yaml  vsphere.yaml  workflow.yml
.trunk/: trunk.yaml
.trunk/configs/: .markdownlint.yaml  .shellcheckrc
backend/: __init__.py
backend/runners_manager/: main.py  start.py
backend/runners_manager/runner/: Manager.py  Runner.py
backend/web/: Webhook.py  app.py
charts/openstack-actions-runner/: Chart.yaml  README.md  requirements.yaml  values.yaml
charts/openstack-actions-runner/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-web.yaml  deployment.yaml  google-service-account.yaml  hpa.yaml  ingress.yaml  secret.yaml  service-manager.yaml  service-monitor.yaml  service-web.yaml  service.yaml  serviceaccount.yaml  settings.yml
charts/runner-manager/: Chart.yaml  README.md  requirements.yaml  values-runner-manager-gcloud.yaml  values.yaml
charts/runner-manager/templates/: _helpers.tpl  basic-auth-secret.yaml  configmap.yaml  deployment.yaml  google-service-account.yaml  ingress.yaml  secret.yaml  service-manager.yaml  service-monitor.yaml  serviceaccount.yaml  settings.yml
dockerfiles/: requirements.txt
docs/: coding-setup.md  config.md  github_flag_once_error.md  index.md  local-setup.md  redis.md  release.md  run-it-locally.md  tags.md
docs/design/: index.md
docs/development/: backends.md  code.md  concepts.md  configuration.md  environment.md  index.md  testing.md  typings.md  workflows.md
docs/development/design/: index.md
docs/getting-started/: local-setup.md  run-it-locally.md
docs/setup/: config.md  k8s-install.md  redis.md
docs/setup/clouds/: aws.md  gcloud.md  index.md  openstack.md
images/runner/: entrypoint.sh
manifests/: kustomization.yaml
manifests/base/: deployment.yaml  kustomization.yaml  redis.env  redis.yaml  runner-manager-auth.env  service.yaml  settings.yaml
packer/: README.md  images-config.yaml
runner_manager/: __init__.py  auth.py  dependencies.py  logging.py  main.py
runner_manager/backend/: aws.py  base.py  docker.py  gcloud.py  openstack.py  scaleway.py  vsphere.py
runner_manager/clients/: github.py
runner_manager/jobs/: healthcheck.py  leaks.py  reset.py  runner.py  runner_groups.py  settings.py  startup.py  webhook.py  workflow_job.py
runner_manager/models/: __init__.py  api.py  backend.py  base.py  runner.py  runner_group.py  runnergroup.py  settings.py  webhook.py
runner_manager/routers/: _health.py  metrics.py  private.py  public.py  runner_groups.py  webhook.py
runner_manager/rq/: settings.py
runner_manager/scripts/: scheduler.py  worker.py
runner_manager/worker/: main.py
runners-manager/: main.py  start.sh
runners-manager/actions/: Runner.py  RunnerManager.py
runners-manager/runner/: Runner.py  RunnerManager.py  VmType.py
runners-manager/vm_creation/: github_actions_api.py  main.py  openstack.py
runners_manager/: main.py  start.py  start.sh
runners_manager/monitoring/: prometheus.py
runners_manager/runner/: Manager.py  Runner.py  RunnerFactory.py  RunnerManager.py  VmType.py
runners_manager/settings/: settings_local.py  settings_prod.py  yaml_config.py
runners_manager/templates/: init_runner_script.sh
runners_manager/vm_creation/: github_actions_api.py  openstack.py
srcs/runners_manager/: main.py  start.py
srcs/settings/: exceptions.py  settings_prod.py  yaml_config.py
srcs/web/: Webhook.py  WebhookManager.py  __init__.py  app.py  models.py
templates/: init_runner_script.sh
templates/html/: index.html
tests/: conftest.py  kustomization.yaml  strategies.py
tests/api/: auth_tests.py  conftest.py  health.py  test_auth.py  test_dependencies.py  test_dependency.py  test_health.py  test_job.py  test_lifespan.py  test_metrics.py  test_runner_groups_router.py  test_webhook.py  test_webhook_router.py  tests_auth.py
tests/unit/: conftest.py
typings/docker/: __init__.pyi  _version.pyi  auth.pyi  client.pyi  constants.pyi  errors.pyi  tls.pyi
typings/pyVim/: __init__.pyi  connect.pyi  sso.pyi
typings/redis_om/: __init__.pyi  _compat.pyi  checks.pyi  connections.pyi  sync_redis.pyi  util.pyi
typings/rq_scheduler/: __init__.pyi  scheduler.pyi  utils.pyi
typings/scaleway/: __init__.pyi
web/: Webhook.py  __init__.py  main.py
web/settings/: settings_local.py  yaml_config.py
(+219 files in other folders)
