[tool.poetry]
name = "runner-manager"
version = "1.0.0"
description = ""
authors = ["Platform Engineering <platform.engineering@scality.com>"]
license = "Apache"
readme = "README.md"
packages = [{ include = "runner_manager" }]
include = ["pyproject.toml", "README.md", "LICENSE", "images/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = ">=1.10.2,<2.0"
redis-om = "^0.3.0"
rq = "^1.16.2"
pyyaml = "^6.0.1"
redis = "^5.0.4"
docker = "^7.0.0"
google-cloud-compute = "^1.18.0"
boto3 = "^1.28.85"
botocore = "^1.31.85"
boto3-stubs = { extras = ["ec2"], version = "^1.34.99" }
githubkit = { extras = ["auth-app"], version = "^0.11.4" }
rq-scheduler = "^0.13.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.21"
mkdocs = "^1.5.3"

[tool.poetry.group.dev.dependencies]
connexion = "^3.0.5"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.5"
pyright = "^1.1.361"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.3"
yamllint = "^1.35.1"
types-redis = "^4.6.0.20240425"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov=runner_manager --cov-report=xml --junitxml=.reports/junit.xml"

# Add poetry scripts
[tool.poetry.scripts]
runner-manager = "runner_manager.main:main"
scheduler = "runner_manager.scripts.scheduler:main"
