[tool.poetry]
name = "runner-manager"
version = "1.0.0"
description = ""
authors = ["Platform Engineering <platform.engineering@scality.com>"]
license = "Apache"
readme = "README.md"
packages = [{ include = "runner_manager" }]
include = ["pyproject.toml", "README.md", "LICENSE", "images/**/*"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
pydantic = ">=1.10.2,<2.0"
redis-om = "^0.3.1"
rq = "^1.16.2"
pyyaml = "^6.0.1"
redis = "^5.0.4"
docker = "^7.1.0"
google-cloud-compute = "^1.19.0"
boto3 = "^1.34.113"
botocore = "^1.34.118"
boto3-stubs = { extras = ["ec2"], version = "^1.34.118" }
githubkit = { extras = ["auth-app"], version = "^0.11.5" }
rq-scheduler = "^0.13.1"
pyvmomi = "^8.0.2.0.1"
vapi-runtime = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/v8.0.1.0/lib/vapi-runtime/vapi_runtime-2.40.0-py2.py3-none-any.whl" }
vcenter-bindings = { url = "https://raw.githubusercontent.com/vmware/vsphere-automation-sdk-python/v8.0.1.0/lib/vcenter-bindings/vcenter_bindings-4.1.0-py2.py3-none-any.whl" }


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.25"
mkdocs = "^1.5.3"

[tool.poetry.group.dev.dependencies]
connexion = "^3.1.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
hypothesis = "^6.103.0"
pyright = "^1.1.365"
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.7"
yamllint = "^1.35.1"
types-redis = "^4.6.0.20240425"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--disable-warnings --cov=runner_manager --cov-report=xml --junitxml=.reports/junit.xml"

# Add poetry scripts
[tool.poetry.scripts]
runner-manager = "runner_manager.main:main"
scheduler = "runner_manager.scripts.scheduler:main"
